another set of fixes to fix serialization and proper versioning between Spring/Java/Gradle
